--- a/first_django/music/static/music/style.css
+++ b/first_django/music/static/music/style.css
@@ -1,11 +1,28 @@
-body{
-    background: white url("images/download.png");
+body {
+    background: white url("images/background.png");
 }
 
-.navbar{
-        border-radius: 0;
+ul.errorlist {
+    padding-left: 0;
 }
 
-.navbar-brand{
-        font-family: 'Satisfy' , cursive;
+ul.errorlist > li {
+    list-style: none;
+}
+
+.navbar {
+    border-radius: 0;
+}
+
+.navbar-brand {
+    font-family: 'Satisfy', cursive;
+}
+
+.glyphicon-star {
+    color: #CCCCCC;
+    font-size: 16px;
+}
+
+.glyphicon-star.active {
+    color: #FDB230;
 }
